	  positive value was allowed. See cassandra.yaml entries like
	  read_request_timeout_in_ms for more details.
	- Cassandra 4.0 allows a single port to be used for both secure and insecure
	  connections between cassandra nodes (CASSANDRA-10404). See the yaml for
	  specific property changes, and see the security doc for full details.

Materialized Views
-------------------
   - Following a discussion regarding concerns about the design and safety of Materialized Views, the C* development
     community no longer recommends them for production use, and considers them experimental. Warnings messages will
     now be logged when they are created. (See https://www.mail-archive.com/dev@cassandra.apache.org/msg11511.html)
   - An 'enable_materialized_views' flag has been added to cassandra.yaml to allow operators to prevent creation of
     views

3.11.1
======

Upgrading
---------
    - Creating Materialized View with filtering on non-primary-key base column
      (added in CASSANDRA-10368) is disabled, because the liveness of view row
      is depending on multiple filtered base non-key columns and base non-key
      column used in view primary-key. This semantic cannot be supported without
      storage format change, see CASSANDRA-13826. For append-only use case, you
      may still use this feature with a startup flag: "-Dcassandra.mv.allow_filtering_nonkey_columns_unsafe=true"

Compact Storage (only when upgrading from 3.X or any version lower than 3.0.15)
---------------
    - Starting version 4.0, Thrift and COMPACT STORAGE is no longer supported.
      'ALTER ... DROP COMPACT STORAGE' statement makes Compact Tables CQL-compatible,
      exposing internal structure of Thrift/Compact Tables. You can find more details
      on exposed internal structure under: 
      http://cassandra.apache.org/doc/latest/cql/appendices.html#appendix-c-dropping-compact-storage

      For uninterrupted cluster upgrades, drivers now support 'NO_COMPACT' startup option.