@@ -361,21 +361,16 @@ counter_cache_save_period: 7200
 # commitlog_sync may be either "periodic", "group", or "batch." 
 # 
 # When in batch mode, Cassandra won't ack writes until the commit log
-# has been fsynced to disk.  It will wait a maximum
-# commitlog_sync_batch_window_in_ms milliseconds between fsyncs.
-# This window should be kept short because the writer threads will
-# be unable to do extra work while waiting.  (You may need to increase
-# concurrent_writes for the same reason.)
+# has been flushed to disk.  Each incoming write will trigger the flush task.
+# commitlog_sync_batch_window_in_ms is a deprecated value. Previously it had
+# almost no value, and is being removed.
 #
-# commitlog_sync: batch
 # commitlog_sync_batch_window_in_ms: 2
 #
 # group mode is similar to batch mode, where Cassandra will not ack writes
 # until the commit log has been flushed to disk. The difference is group
-# mode will wait commitlog_sync_group_window_in_ms *at a minimum*
-# between flushes. 
+# mode will wait up to commitlog_sync_group_window_in_ms between flushes.
 #
-# commitlog_sync: group
 # commitlog_sync_group_window_in_ms: 1000
 #
 # the default option is "periodic" where writes may be acked immediately
